disable errorLog
