# routes/user.routes.ts
@@ -1,0 +1,6 @@
+import { Router } from "express"
+import { getUserByIdController } from "../controllers/user.controller"
+const USerRouter = Router()
+USerRouter.get('/:id', (req, res) => getUserByIdController(req, res))
+
+export { USerRouter }
